More API fiddling

--- a/demo/users/write/yacdo.yaml
+++ b/demo/users/write/yacdo.yaml
@@ -1,11 +1,11 @@
-version: 1
+version: "0.1"
 
 processor:
   environment:
     - DEBUG
 
   intents:
-    - type: "CREATE_USER?":
+    - id: "CREATE_USER?"
       handler: "./createUser.ts"
       permissions:
         - CAN_CREATE_USERS
@@ -13,23 +13,15 @@ processor:
         - "USER_CREATED!"
       replay:
         - "USER_CREATED!"
+      runtime: "typescript"
       schema:
         email: String@email
         firstName: String@firstName
         userId: String@userId
 
   facts:
-    - type: "USER_CREATED!"
+    - id: "USER_CREATED!"
       schema:
         email: String@email
         firstName: String@firstName
         userId: String@userId
-
-readviews:
-  - handler: "./readviews/createdUsers.ts"
-    name: "allUsers"
-    replay:
-      - "USER_CREATED!"
-    #schema:
-      # TODO: GraphQL?
-
